# AIResearch

./: AZURE_OPENAI_SETUP.md  BUILD_SETUP.md  BUILD_STATUS_REPORT.md  CLONE_REPOSITORIES_README.md  CONFIGURATION_GUIDE.md  DATABASE_SETUP.md  DOCKER_INSTALL.md  FIND_LANGFUSE_API_KEYS.md  GET_COMMIT_HISTORY_README.md  HARNESS_QUICK_START.md  HYPOCHONDRI_AI_QUICK_START.md  INSTALLATION_GUIDE.md  LANGCHAIN_API_KEY_EXPLAINED.md  LANGFUSE_API_KEYS.md  LANGFUSE_CLOUD_SETUP.md  LANGFUSE_EXPLAINED.md  LANGFUSE_QUICK_START.md  LANGFUSE_QUICK_START_CLOUD.md  LANGFUSE_SETUP.md  LANGFUSE_TROUBLESHOOTING.md  PARENT_ENV_SETUP.md  README_HARNESS.md  RepositoryEdits.md  TESTING_HARNESS.md  TEST_HYPOCHONDRI_AI.md  TOKEN_TRACKING_SETUP.md  TruePositiveCommitsClean.csv  analyze_build_requirements.py  analyze_graph_changes.py  analyze_projects.py  build_requirements.json  build_verification_results.json  clone_log.json  clone_repositories.py  compare_results.py  docker-compose.langfuse.yml  docker-compose.yml  enforce_azure_openai.py  generate_graph_report.py  get_commit_history.py  (+18 more)
Research Data/DocRAG-Backend/DocRAG-Backend-8c0d68755d31ad633fc8c026bc8e866c836149ad/: langgraph.json  pyproject.toml  record_manager_cache.sql  requirements.txt  setup.py
Research Data/DocRAG-Backend/DocRAG-Backend-8c0d68755d31ad633fc8c026bc8e866c836149ad/src/: main.py  record_manager_cache.sql  server.py
Research Data/MemGPT-Discord/MemGPT-Discord-77cff2f5636ae3b322d9e3b2cca1a1de5a90a4e9/: README.md  langgraph.json  main.py  pyproject.toml
Research Data/MemGPT-Discord/MemGPT-Discord-77cff2f5636ae3b322d9e3b2cca1a1de5a90a4e9/my_agent/: agent.py
Research Data/RAG-Demon/RAG-Demon-de66a26cac71261a4803b93484248a9a5b0514aa/src/: pyproject.toml
Research Data/SSU_RAG/SSU_RAG-4228e4e133cd201ebb2e04d0e40c3bf27b775b4c/: README.md  VECTOR_README.md  chains.py  cost-perf-results.json  embedding_processor.py  main.py  pyproject.toml  run_cost_perf.py  scheduler.py  vector_store.py
Research Data/SSU_RAG/SSU_RAG-4228e4e133cd201ebb2e04d0e40c3bf27b775b4c/data/: rss_items.json
Research Data/SSU_RAG/SSU_RAG-4228e4e133cd201ebb2e04d0e40c3bf27b775b4c/frontend/: README.md  package.json
Research Data/SSU_RAG/SSU_RAG-4228e4e133cd201ebb2e04d0e40c3bf27b775b4c/rss/: RSS_README.md  utils.py
Research Data/Sayidah-Call-Center/Siyadah-Call-Center-AI-maatmd-fryq-4874dabad7212cc6e5d6f6b6fcbb002f008a5fc9/: .replit  AG_UI_IMPLEMENTATION.md  AG_UI_TEST_REPORT.md  AWS_INFRASTRUCTURE_PLAN.md  BULLETPROOF_API_SUCCESS.md  COMPLETE_API_SOLUTION.md  COMPLETION_STATUS_FINAL.md  COMPREHENSIVE_AUTHENTICATION_PERMISSIONS_REVIEW.md  COMPREHENSIVE_SYSTEM_STATUS_FINAL.md  ELEVENLABS_TROUBLESHOOTING.md  ENTERPRISE_DEPLOYMENT_GUIDE.md  FINAL_STATUS_COMPLETED.md  FINAL_STATUS_REPORT.md  FINAL_SYSTEM_COMPLETION_STATUS.md  FINAL_SYSTEM_REVIEW.md  FINAL_TWILIO_REMOVAL_STATUS.md  FRONTEND_JSON_FIX.md  IMPLEMENTATION_STATUS.md  INTENT_AGENT_ENHANCEMENT_REPORT.md  INTERACTIVE_VOICE_FIX.md  LANGUAGE_SUPPORT_REPORT.md  MONGODB_EXPERT_GUIDE.md  MULTILINGUAL_AGENTS_GUIDE.md  NATURAL_VOICE_AI_GUIDE.md  PROFESSIONAL_ASSESSMENT_REPORT.md  PROFESSIONAL_PAGE_STRUCTURE.md  PROFESSIONAL_SAAS_COMPLETION_REPORT.md  PROJECT_REVIEW_REPORT.md  QA_COMPREHENSIVE_TEST_REPORT.md  QA_FINAL_HONEST_REPORT.md  RBAC_IMPLEMENTATION_REPORT.md  RBAC_PERMISSIONS_GUIDE.md  REAL_AI_TRANSFORMATION_GUIDE.md  SETTINGS_FINAL_FIX.md  SETTINGS_FIX_STATUS.md  SETTINGS_IMPLEMENTATION_STATUS.md  SIYADAH_AI_DIAGNOSTIC.md  SIYADAH_CALL_CENTER_ROADMAP.md  SIYADAH_SAAS_STRATEGY.md  SUPABASE_SETUP.md  (+20 more)
Research Data/Sayidah-Call-Center/Siyadah-Call-Center-AI-maatmd-fryq-4874dabad7212cc6e5d6f6b6fcbb002f008a5fc9/ai-service/: README.md  crewai_system.py  langgraph_api.py  langgraph_crewai_integration.py  langgraph_crewai_simple.py  run.sh
Research Data/Sayidah-Call-Center/Siyadah-Call-Center-AI-maatmd-fryq-4874dabad7212cc6e5d6f6b6fcbb002f008a5fc9/attached_assets/: AdvancedSettings_1749420848565.jsx  BillingSettings_1749420848566.jsx  IntegrationSettings_1749420865253.jsx  NotificationSettings_1749420865254.jsx  OpportunityDetailPanel_1749420848563.jsx  Pasted---1750534788857_1750534788857.txt  Pasted---1750764468508_1750764468509.txt  Pasted--1-2-3-1751234755853_1751234755854.txt  Pasted--Replit--1751047005010_1751047005012.txt  Pasted-1-A-12--1750764142686_1750764142687.txt  (+8 more)
Research Data/boss-bot/boss-bot-426a3505432ca841d8d0d8569a53c6d534852535/: .cursorindexingignore  .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  langgraph.json  metadata.json  mkdocs_macro_plugin.py  pyproject.toml  pyrightconfig.json
Research Data/cybershield/cybershield-c6c2d98169d6f2a6b0fd1132ed7771a69770e39f/: .gitignore  CLAUDE.md  docker-compose.yaml  pyproject.toml
Research Data/knowledge-agent/knowledge_agent-e4c81ec2352265ce89233400995dfca1c9101f94/: README.md  knowledge_agent.py  pyproject.toml  run.py  state.py  sub_agents.py
Research Data/knowledge-agent/knowledge_agent-ef77bb2ccb38eee7f8a5e2374edb418adac4473b/: .gitignore  db_utils.py  knowledge_agent.py  mcp.json  pyproject.toml  run.py  state.py  tools.py
Research Data/nlp/nlp-ed783b2aebf9bdad2de7fedcec3a9ba9e723e7f8/: .gitignore  .prettierignore  CLAUDE.md  MakeMoreMLP.ipynb  PlayEmbed.ipynb  PlayJournal.ipynb  TF-IFD.ipynb  ai_talk.py  askig_build_logic.py  askig_logic.py  askig_mcp.py  askig_models.py  bestie.py  captions.py  changes.py  cloud.py  docker-compose.yml  docker_qa_bot  ell_helper.py  github_helper.py  gpt.py  illustrate.py  iwhere.py  life.py  openai_wrapper.py  package.json  pchanges.py  pdspy.py  pell.py  play_groundx.py  podcast.py  pych_report.md.jinja  pyproject.toml  think.py  tts.py  twillo_serve.py  vapi_sim.py
Research Data/sys-scan-graph/sys-scan-graph-d0e0ea8a9d030175fb196f8f4f30ecf378bd0f10/: .gitattributes  ARCHITECTURE.md  BuildInfo.h.in  CMakeLists.txt  CXX_OPTIMIZATION_CHECKLIST.md  LICENSE  README.md  SCHEMA_MIGRATION.md  core_enhancements.md  cost-perf-results.json  rarity.yaml  repo_analysis.md  run_cost_perf.py
(+4747 files in other folders)
