[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.134.0",
    "dnspython>=2.7.0",
    "fastapi>=0.115.14",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "pymongo>=4.13.1",
    "pytest>=8.4.1",
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "selenium>=4.33.0",
    "uvicorn>=0.34.3",
    "webdriver-manager>=4.0.2",
]
