# :schema = "https://json.schemastore.org/pyproject.json"

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools>=61"]

[dependency-groups]
    dev = [
        "aiodebug>=2.3.0",
        "aiomonitor>=0.7.1",
        "bpython>=0.25",
        "bump-pydantic>=0.8.0",
        "codetiming>=1.4.0",
        "commitizen>=4.4.1",
        "coverage[toml]>=7.6.12",
        "debugpy>=1.8.12",
        "dpytest>=0.7.0",
        "factory-boy>=3.3.3",
        "faker>=37.1.0",
        "griffe-inherited-docstrings>=1.1.1",
        "griffe-typingdoc>=0.2.8",
        "ipykernel>=6.29.5",
        "ipywidgets>=8.1.5",
        "jedi-language-server>=0.44.0",
        "markdown-emdash>=0.2.0",
        "memory-profiler>=0.61.0",
        "mkdocs-api-autonav>=0.2.1",
        "mkdocs-awesome-pages-plugin>=2.10.1",
        "mkdocs-coverage>=1.1.0",
        "mkdocs-ezlinks-plugin>=0.1.14",
        "mkdocs-gen-files>=0.5.0",
        "mkdocs-git-authors-plugin>=0.9.4",
        "mkdocs-git-revision-date-localized-plugin>=1.4.5",
        "mkdocs-glightbox>=0.4.0",
        "mkdocs-jupyter>=0.25.1",
        "mkdocs-literate-nav>=0.6.2",
        "mkdocs-macros-plugin>=1.3.7",
        "mkdocs-material>=9.6.6",
        "mkdocs-mermaid2-plugin>=1.2.1",
        "mkdocs-open-in-new-tab>=1.0.8",
        "mkdocs-section-index>=0.3.9",
        "mkdocs-towncrier>=0.1.4",
        "mkdocs>=1.6.1",
        "mkdocstrings[python]>=0.29.1",
        "mypy>=1.15.0",
        "nbconvert>=7.16.6",
        "nbqa>=1.9.1",
        "neoteroi-mkdocs>=1.1.0",
        "notebook>=7.3.3",
        "pdoc>=15.0.1",
        "pre-commit>=4.1.0",
        "pydocstyle>=6.3.0",
        "pygments>=2.19.1",
        "pyinspect>=0.1.0",
        "pyinstrument>=5.0.1",
        "pylint-per-file-ignores>=1.4.0",
        "pylint-pydantic>=0.3.5",
        "pyright>=1.1.395",
        "pytest-aiohttp>=1.1.0",
        "pytest-aioresponses>=0.3.0",
        "pytest-asyncio>=0.25.3",
        "pytest-clarity>=1.0.1",
        "pytest-cov>=6.0.0",
        "pytest-freezegun",
        "pytest-httpx>=0.35.0",
        "pytest-ignore-flaky>=2.2.1",
        "pytest-memray>=1.7.0",
        "pytest-mock>=3.14.0",
        "pytest-recording>=0.13.2",
        "pytest-retry>=1.7.0",
        "pytest-skip-slow>=0.0.5",
        "pytest-skipuntil>=0.2.0",
        "pytest-subprocess>=1.5.3",
        "pytest-sugar>=1.0.0",
        "pytest-timeout>=2.2.0",
        "pytest>=8.3.4",
        "pyupgrade>=3.19.1",
        "requests-mock>=1.12.1",
        "respx>=0.22.0",
        "ruff>=0.9.9",
        "rust-just>=1.40.0",
        "towncrier>=24.8.0",
        "tox-uv>=1.25.0",
        "types-aiofiles>=24.1.0.20241221",
        "types-beautifulsoup4>=4.12.0.20250204",
        "types-mock>=5.1.0.20240425",
        "types-requests>=2.32.0.20250301",
        "validate-pyproject[all,store]>=0.23",
        "watchdog[watchmedo]>=6.0.0",
        "widgetsnbextension>=4.0.13",
    ]

[project]
    authors = [
        { email = "bossjones@theblacktonystark.com", name = "Malcolm Jones" },
    ]
    dependencies = [
        "agentevals>=0.0.8",
        "aiocache>=0.12.3",
        "aiodns>=3.2.0",
        "aiofile>=3.9.0",
        "aiofiles>=24.1.0",
        "aiohttp>=3.11.16",
        "aioprometheus[starlette]>=23.12.0",
        "aiopytesseract>=0.14.0",
        "aiosql>=13.3",
        "aiosqlite>=0.21.0",
        "asyncer>=0.0.8",
        "attrs>=25.3.0",
        "babel>=2.17.0",
        "beautifulsoup4>=4.13.3",
        "better-exceptions>=0.3.3",
        "boto3>=1.37.29",
        "bpython>=0.25",
        "chardet>=5.2.0",
        "dask>=2025.3.0",
        "datasette-configure-fts>=1.1.4",
        "datasette-dashboards>=0.7.1",
        "datasette-dateutil>=0.3",
        "datasette-explain>=0.2.1",
        "datasette-media[heif]>=0.5.1",
        "datasette-render-images>=0.4",
        "datasette-scraper>=0.5.3",
        "datasette-search-all>=1.1.4",
        "datasette-sqlite-ulid>=0.2.1",
        "datasette-sqlite-vec>=0.1.6",
        "datasette-statistics>=0.2.1",
        "datasette-vega>=0.6.2",
        "datasette>=0.65.1",
        "dclient>=0.4",
        "discord-py>=2.5.2",
        "docutils>=0.21.2",
        "faiss-cpu>=1.10.0",
        "fastapi>=0.115.9",
        "files-to-prompt>=0.4",
        "fonttools[woff]>=4.57.0",
        "gallery-dl>=1.29.3",
        "gitpython>=3.1.44",
        "google-auth-oauthlib>=1.2.1",
        "google-auth>=2.38.0",
        "google-generativeai>=0.8.4",
        "gutter>=0.5.0",
        "httpx[http2]>=0.28.1",
        "huggingface-hub>=0.30.1",
        "imageio>=2.37.0",
        "imutils>=0.5.4",
        "jq>=1.8.0",
        "langchain-anthropic>=0.3.9",
        "langchain-aws>=0.2.15",
        "langchain-community>=0.3.19",
        "langchain-core>=0.3.43",
        "langchain-google-genai>=2.0.10",
        "langchain-groq>=0.3.2",
        "langchain-mcp-adapters>=0.1.7",
        "langchain-openai>=0.3.8",
        "langchain-postgres>=0.0.13",
        "langchain-text-splitters>=0.3.6",
        "langchain[anthropic,community,google-genai,huggingface,openai,perplexity,xai]>=0.3.20",
        "langchainhub>=0.1.21",
        "langgraph-api>=0.2.61",
        "langgraph-checkpoint-sqlite>=2.0.10",
        "langgraph-gen>=0.0.6",
        "langgraph-sdk>=0.1.70",
        "langgraph-supervisor>=0.0.27",
        "langgraph-swarm>=0.0.11",
        "langgraph>=0.3.5",
        "langmem>=0.0.27",
        "langsmith[pytest]>=0.3.13",
        "lazy-object-proxy>=1.10.0",
        "llm-anthropic>=0.12",
        "llm-cmd>=0.2a0",
        "llm-docsmith>=0.3.1",
        "llm-jq>=0.1.1",
        "llm-perplexity>=2025.2.0",
        "llm-python>=0.1",
        "llm-sentence-transformers>=0.2",
        "llm>=0.19",
        "llms-txt>=0.0.4",
        "llmstxt-architect>=0.6.1",
        "logging-tree>=1.10",
        "loguru>=0.7.3",
        "lxml>=5.3.2",
        "markdown-to-sqlite>=1.0",
        "markdown>=3.7",
        "matplotlib>=3.10.1",
        "mcp[cli]>=1.3.0",
        "md2pdf>=1.0.1",
        "motor>=3.7.0",
        "moviepy>=1.0.3",
        "multiprocess>=0.70.17",
        "mutagen>=1.47.0",
        "numpy>=1.26.4",
        "openai>=1.71.0",
        "openevals>=0.1.0",
        "pandas>=2.2.3",
        "passlib[bcrypt]>=1.7.4",
        "pathlib-mate>=1.3.2",
        "pdf2image>=1.17.0",
        "pickledb>=1.3.2",
        "pillow>=11.1.0",
        "prettytable>=3.16.0",
        "prometheus-client>=0.21.1",
        "psutil>=5.9.5",
        "pycryptodome>=3.22.0",
        "pydantic-settings>=2.8.1",
        "pydantic[email]>=2.11.2",
        "pygithub>=2.6.1",
        "pyinvoke>=1.0.4",
        "pymupdf>=1.25.5",
        "pyowm>=3.3.0",
        "pypdf2>=3.0.1",
        "pypdf>=5.4.0",
        "pypi-command-line[speedups]>=1.7.1",
        "pysnooper>=1.2.1",
        "pytablewriter[html]>=1.2.1",
        "pytesseract>=0.3.13",
        "python-decouple>=3.8",
        "python-docx>=1.1.2",
        "python-dotenv>=1.1.0",
        "python-json-logger>=3.3.0",
        "python-levenshtein>=0.27.1",
        "python-slugify>=8.0.4",
        "pytz>=2025.1",
        "rank-bm25>=0.2.2",
        "rapidocr-onnxruntime>=1.4.4",
        "redis>=5.2.1",
        "requests-toolbelt>=1.0.0",
        "requests>=2.32.3",
        "rich>=13.9.4",
        "scenedetect[opencv]>=0.6.6",
        "sentence-transformers>=4.0.2",
        "sentencepiece>=0.2.0",
        "sentry-sdk>=2.25.1",
        "shot-scraper>=1.8",
        "simpletransformers>=0.70.1",
        "soupsieve>=2.6",
        "spacy>=3.8.4",
        "sqlite-chronicle>=0.4",
        "sqlite-diffable>=0.6",
        "sqlite-utils-ask>=0.2",
        "sqlite-utils-litecli>=0.1.1",
        "sqlite-utils-tui>=0.1",
        "sqlite-utils>=3.38",
        "streamlit>=1.44.1",
        "striprtf>=0.0.29",
        "telnetlib3>=2.0.4",
        "tenacity>=9.0.0",
        "timm>=1.0.15",
        "torch>=2.6.0",
        "torchvision>=0.21.0",
        "tqdm>=4.67.1",
        "transformers>=4.51.0",
        "trustcall>=0.0.39",
        "ttok>=0.3",
        "typer>=0.15.2",
        "tzlocal>=5.2",
        "unstructured[all-docs]>=0.17.2",
        "uritemplate>=4.1.1",
        "uritools>=4.0.3",
        "uvicorn>=0.34.0",
        "validators>=0.34.0",
        "webcolors>=24.11.1",
        "websockets>=15.0.1",
        "wikipedia>=1.4.0",
        "yaml-to-sqlite>=1.0",
        "yfinance>=0.2.55",
        "youtube-search>=2.1.2",
        "yt-dlp>=2025.3.31",
    ]
    description = "Discord bot named after me, boss"
    keywords = ["ai", "boss", "bot", "discord"]
    license = { file = "LICENSE.txt" }
    name = "boss-bot"
    readme = "README.md"
    requires-python = ">=3.12"
    version = "0.12.0"

    [project.scripts]
        # clctl       = "boss_bot.cli:main"
        # boss-bot = "boss_bot.cli:main"
        bossctl = 'boss_bot.cli.main:entry'

    [project.urls]
        "Bug Tracker"   = "https://github.com/bossjones/boss-bot/issues"
        Changelog       = "https://github.com/bossjones/boss-bot/blob/main/CHANGELOG.md"
        "Code"          = "https://github.com/bossjones/boss-bot"
        Documentation   = "https://bossjones.github.io/boss-bot/boss_bot.html"
        Homepage        = "https://github.com/bossjones/boss-bot"
        "Issue tracker" = "https://github.com/bossjones/boss-bot/issues"
        Repository      = "https://github.com/bossjones/boss-bot"

[tool.setuptools]
    package-dir = { "" = "src" }
    packages    = ["boss_bot"]

[tool.changelog-bot]

    [tool.changelog-bot.towncrier_changelog]
        changelog_skip_label = "no-changelog-entry-needed"
        enabled              = true
        verify_pr_number     = true

# SOURCE: https://github.com/fmind/mlops-python-package/blob/2a9741f0f97e2213aafb9f3e9bb5b0a9092738cd/pyproject.toml
[tool.commitizen]
    # Indicates the commit from which to start generating the changelog.
    changelog_start_rev = "v0.1.0"
    # Specifies the commitizen plugin to use for creating conventional commits.
    name = "cz_conventional_commits"
    # Defines the format for version tags (e.g., v1.2.3).
    tag_format = "v$version"
    # Automatically update the changelog file on version bumps.
    update_changelog_on_bump = true
    # Specifies that the version is defined in pyproject.toml as per PEP 621.
    version_provider = "pep621"
    # Declares the versioning scheme to be compliant with PEP 440.
    version_scheme = "pep440"

[tool.coverage.html]
    directory = "htmlcov"

[tool.coverage.paths]
    # The first path is the path on the local filesystem
    # The second path is the path as it appears within the Docker container
    source = ["/usr/src/python-app", "src/"]

[tool.coverage.report]
    # Additional regexes for lines to exclude from consideration
    exclude_also = [
        # Don't complain about abstract methods, they aren't run:
        "@(abc\\.)?abstractmethod",
        # A pragma comment that excludes an entire file:
        "\\A(?s:.*# pragma: exclude file.*)\\Z",
        # Don't complain about missing debug-only code:
        "def __repr__",
        # Exclude specific exception clauses:
        "except ValueError:\\n\\s*assume\\(False\\)",
        # Don't complain if non-runnable code isn't run:
        "if 0:",
        "if __name__ == .__main__.:",
        "if self\\.debug",
        # Comments to turn coverage on and off:
        "no cover: start(?s:.)*?no cover: stop",
        # Don't complain if tests don't hit defensive assertion code:
        "raise AssertionError",
        "raise NotImplementedError",
    ]
    exclude_lines = [
        "@(abc.)?abstractmethod",
        "@overload",
        "@typing.overload",
        "assert_never",
        "def __repr__",
        "def __str__",
        "except ImportError:",
        "if TYPE_CHECKING",
        "if TYPE_CHECKING:",
        "if __name__ == .__main__.:",
        "if not _PANDAS_AVAILABLE:",
        "if self.debug",
        "if settings.DEBUG",
        "if typing.TYPE_CHECKING:",
        "pragma: $TEST_PLATFORM no cover",
        "pragma: no cover",
        "pragma: py$PYTHON_VERSION no cover",
        "raise AssertionError",
        "raise NotImplementedError",
        "return NotImplemented",
        "typing.assert_never",
        '\(Protocol\):$',
        '\s*\.\.\.$',
    ]
    # fail_under = 30
    # Ignore source code that can't be found, emitting a warning instead of an exception
    ignore_errors = false
    omit          = ["*/studio/*", "*/test/*", "*/tests/*"]
    # When running a summary report, show missing lines
    show_missing = true
    # Don't report files that are 100% covered
    skip_covered = false
    skip_empty   = true

# ===========================[ COVERAGE CONFIGURATION ]========================
[tool.coverage.run]
    branch         = true
    concurrency    = ["greenlet", "multiprocessing", "thread"]
    data_file      = ".coverage"
    parallel       = true
    relative_files = true
    source         = ["src"]

[tool.coverage.xml]
    output = "cov.xml"

[tool.pytest]

    [tool.pytest.ini_options]
        addopts = [
            '--cov-branch',
            '--cov-report=annotate:cov_annotate',
            '--cov-report=html:htmlcov',
            '--cov-report=term-missing',
            '--cov-report=xml:cov.xml',
            # Coverage reporting options
            '--cov=src',
            '--durations-min=0.05',
            # Print runtimes of the slowest tests.
            '--durations=10',
            '--junitxml=junit/test-results.xml',
            # Timeout settings
            '--timeout=30',
            '--timeout_method=thread',
        ]
        asyncio_default_fixture_loop_scope = "function"
        asyncio_mode = "auto"
        # Test timeouts
        filterwarnings = [
            "default::DeprecationWarning:democracy_exe.*:",
            "default::pydantic.warnings.PydanticDeprecatedSince20:democracy_exe.*:",
            "ignore::DeprecationWarning:.venv.*:",
            "ignore::DeprecationWarning:audioop:",
            "ignore::DeprecationWarning:discord.*:",
            "ignore::ResourceWarning:aiohttp",
            "ignore::ResourceWarning:anyio.abc",
            "ignore::ResourceWarning:anyio.streams.memory",
            "ignore::ResourceWarning:anyio.streams.stapled",
            "ignore::ResourceWarning:asyncio",
            "ignore::ResourceWarning:pytest_asyncio",
            "ignore::pydantic.warnings.PydanticDeprecatedSince20:.venv.*:",
            "ignore::pydantic.warnings.PydanticDeprecatedSince20:fireworks.*:",
            "ignore::pydantic.warnings.PydanticDeprecatedSince20:pydantic.*:",
            'ignore:configuration option "asyncio_default_fixture_loop_scope" is unset',
        ]
        log_cli = false
        log_cli_date_format = "%Y-%m-%d %H:%M:%S"
        timeout = 30 # Default timeout in seconds for all tests
        timeout_method = "thread" # Use thread-based timeout (more reliable than signal-based)
        # log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
        # log_cli_format = "%(asctime)s [%(levelname)8s] %(module)s.%(funcName)s:%(lineno)d - %(message)s"
        log_cli_format = "%(asctime)s [%(levelname)8s] [%(threadName)s] %(name)s - %(module)s.%(funcName)s (%(filename)s:%(lineno)d) - %(message)s"
        log_cli_level  = "DEBUG"
        # Enable live logging to a file when needed (very useful when debugging evals)
        log_file = "pytest-accuracy-debug.log"
        log_file_date_format = "%Y-%m-%d %H:%M:%S"
        log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
        log_file_level = "DEBUG"
        markers = [
            "agenticonly: marks tests that run code that utilizes the agentic module (deselect with '-m \"not agenticonly\"')",
            "aidergenerated: marks tests that are aider generated (deselect with '-m \"not aidergenerated\"')",
            "asynciotyper: marks tests that are asyncio typer generated (deselect with '-m \"not asynciotyper\"')",
            "chatbotonly: marks tests that run code that utilizes the chatbot module (deselect with '-m \"not chatbotonly\"')",
            "cli: marks tests that are cli generated (deselect with '-m \"not cli\"')",
            "cogs: marks tests that run code that utilizes the cogs module (deselect with '-m \"not cogs\"')",
            "configonly: marks tests that run code that utilizes the config module (deselect with '-m \"not configonly\"')",
            "cursorgenerated: marks tests that are cursor generated (deselect with '-m \"not cursorgenerated\"')",
            "discordonly: marks tests that run code that belongs to the discordonly calls at end of pytest run module  (deselect with '-m \"not discordonly\"')",
            "dropboxonly: marks tests that run code that utilizes the dropbox module (deselect with '-m \"not dropboxonly\"')",
            "e2e: marks tests dealing with e2e testing (deselect with '-m \"not e2e\"')",
            "evals: marks tests as evals (run with '-m evals')",
            "fast: marks tests as fast (run with '-m fast')",
            "gallerydlonly: marks tests that run code that utilizes the gallery-dl module (deselect with '-m \"not gallerydlonly\"')",
            "httpclientonly: marks tests that run code that utilizes the http_client module (deselect with '-m \"not httpclientonly\"')",
            "imgops: marks tests as imgops (run with '-m imgops')",
            "integration: marks tests dealing with integration testing (deselect with '-m \"not integration\"')",
            "logsonly: marks tests that run code that utilizes the logs module (deselect with '-m \"not logsonly\"')",
            "onboardingonly: marks tests that run code that utilizes the new_dev_onboarding_tool module (deselect with '-m \"not onboardingonly\"')",
            "pgvectoronly: marks tests that run code that utilizes the pgvector module (deselect with '-m \"not pgvectoronly\"')",
            "retryonly: marks tests that run code that utilizes the retry module (deselect with '-m \"not retryonly\"')",
            "services: marks tests that run code that belongs to the services module  (deselect with '-m \"not services\"')",
            "skip_in_parallel: marks tests that should be run in serial only (deselect with '-m \"not skip_in_parallel\"')",
            "slow: marks tests as slow (run with '-m slow')",
            "slower: marks tests that run code that belongs to the slower calls at end of pytest run module  (deselect with '-m \"not slower\"')",
            "toolonly: marks tests that run code that utilizes a Custom Langchain tool module in the tools directory (deselect with '-m \"not toolonly\"')",
            "unittest: marks tests dealing with unittest (deselect with '-m \"not unittest\"')",
            "utilsonly: marks tests that run code that utilizes any utils module (deselect with '-m \"not utilsonly\"')",
            "vcrcanary: marks tests that run code that utilizes the vcr test canary module (deselect with '-m \"not vcrcanary\"')",
            "vcronly: marks tests that run code that utilizes the vcr module (deselect with '-m \"not vcronly\"')",
            "vectorstoronly: marks tests that run code that utilizes the flex_vector_store_tool module (deselect with '-m \"not vectorstoronly\"')",
            "visiontoolonly: marks tests that run code that utilizes vision_tool.py (deselect with '-m \"not visiontoolonly\"')",
            "webpagetoolonly: marks tests that run code that utilizes the fetch_webpage_tool module (deselect with '-m \"not webpagetoolonly\"')",
        ]
        pythonpath = "."
        testpaths = ["tests"]

# Basic settings
[tool.ruff]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "contrib/",
        "dist",
        "node_modules",
        "tests",
        "venv",
    ]
    include = ["*.ipynb", "*.py", "*.pyi"]
    line-length = 120
    src = ["packages", "src", "tests"]
    target-version = "py312"

    [tool.ruff.format]
        docstring-code-format = true

    # Linting settings
    [tool.ruff.lint]
        dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
        ignore = [
            # Existing ignores
            "B008",
            "B904",
            "C901",
            # New ignores from errors
            "D100",
            "D103",
            "D104",
            "D107",
            "D200",
            "D203",
            "D205",
            "D211",
            "D212",
            "D213",
            "D400",
            "D401",
            "D413",
            "D415",
            "D417",
            "E501",
            "E722",
            "F401",
            "F841",
            "N812",
            "PGH003",
            "RUF001",
            "RUF013",
            "RUF015",
            "RUF022",
            "S101",
            "S110",
            "S603",
            "S607",
            "SIM102",
            "SIM103",
            "SIM105",
            "SIM108",
            "SIM118",
            "UP006",
            "UP007",
            "UP035",
        ]
        # Existing configuration
        select = [
            "A",
            "B",
            "C4",
            "C90",
            "D",
            "E",
            "F",
            "I",
            "PGH",
            "RUF",
            "S",
            "SIM",
            "T10",
            "TID252",
            "UP",
            "W",
            "YTT",
        ]

        # Add per-file configurations
        [tool.ruff.lint.per-file-ignores]
            # Init files
            "**/__init__.py"    = ["D104", "F401"]
            "**/__version__.py" = ["D104", "F401", "RUF"]
            # Server/complex files
            "**/fserver.py" = ["C901", "D200", "D205", "D400", "D415"]
            # Template handling
            "**/import_templates.py" = ["C901", "D401"]
            # Repository analysis
            "**/repository_analyzer.py" = ["C901", "SIM102"]
            "**/server.py" = ["B904", "PGH003"]
            "contrib/**" = ["D103", "E702", "RUF"]
            "doc/**" = ["A001", "C408", "UP031"]
            "scripts/**" = [
                "A001",
                "C408",
                "D",
                "D103",
                "PGH004",
                "RUF005",
                "S602",
                "UP031",
                "UP038",
            ]
            "src/**" = [
                "A001",
                "A002",
                "A004",
                "B006",
                "B007",
                "B018",
                "B026",
                "B904",
                "C408",
                "C416",
                "C417",
                "C901",
                "D101",
                "D102",
                "D103",
                "D105",
                "D106",
                "D200",
                "D205",
                "D301",
                "D400",
                "D401",
                "D415",
                "E402",
                "E702",
                "E711",
                "E721",
                "E731",
                "E741",
                "F403",
                "F405",
                "F811",
                "F821",
                "PGH003",
                "PGH004",
                "RUF002",
                "RUF005",
                "RUF006",
                "RUF008",
                "RUF012",
                "RUF046",
                "RUF100",
                "S105",
                "S108",
                "S113",
                "S311",
                "S324",
                "S602",
                "S605",
                "SIM101",
                "SIM102",
                "SIM110",
                "SIM115",
                "SIM116",
                "SIM117",
                "SIM222",
                "T100",
                "TID252",
                "UP031",
                "UP038",
                "UP040",
                "YTT201",
            ]
            "src/boss_bot/downloaders/**" = ["D103", "E702", "RUF", "SIM105"]

        [tool.ruff.lint.pydocstyle]
            convention = "google"

        # Add banned-imports rule
        [tool.ruff.lint.flake8-import-conventions]
            banned-from = ["unittest.mock"]

[tool.tomlsort]
    all = true
    ignore_case = true
    sort_first = [
        "build-system",
        "dependency-groups",
        "project",
        "project.scripts",
        "project.urls",
        "tool.setuptools",
        "tool.uv.sources",
        "tool.uv.workspace",
    ]
    sort_inline_arrays = false
    sort_inline_tables = false
    sort_table_keys = false
    spaces_before_inline_comment = 2
    spaces_indent_inline_array = 4
    trailing_comma_inline_array = true

[tool.towncrier]
    # Add the filename option extension to news fragment files created with towncrier create
    create_add_extension = true
    # File handling configuration
    # Ensure the content of a news fragment file created with towncrier create ends with an empty line
    create_eof_newline = true
    # The directory storing your news fragments
    directory = "changes/"
    # The filename of your news file
    filename = "CHANGELOG.md"
    # A case-insensitive list of filenames in the news fragments directory to ignore
    ignore = [
        ".gitignore",
        ".gitkeep",
        ".keep",
        ".template.md.jinja",
        "README",
        "README.md",
        "README.rst",
        "simple.md.jinja",
        "towncrier_template.md.jinja",
        "towncrier_template_from_hikari.md.jinja",
    ]
    # Format string for rendering the issue/ticket number in newsfiles
    issue_format = "[#{issue}](https://github.com/bossjones/boss-bot/pull/{issue})"
    # Validation and ignore patterns
    # Ensure the issue name matches a certain regex pattern (digit-only file names in this case)
    issue_pattern = "\\d+"     # Only allow numeric issue IDs
    name          = "boss_bot"
    # The Python package name of your project - allows name and version to be automatically determined
    package = "boss_bot"
    # The magic string that towncrier looks for when considering where the release notes should start
    start_string = "<!-- towncrier release notes start -->\n"
    # Path to the template for generating the news file
    # template = "changes/.template.md.jinja"
    # template = "changes/towncrier_template.md.jinja"
    template = "changes/towncrier_template_from_hikari.md.jinja"
    # Format string for the title of your project, using {name}, {version}, and {project_date}
    # title_format = "## [{version}](https://github.com/bossjones/boss-bot/tree/{version}) - {project_date}"
    # The characters used for underlining headers (empty strings mean no underlining)
    # underlines = ["", "", ""]
    underlines = [2, 3]

    [[tool.towncrier.section]]
        path = ""

    # The order of entries matters! It controls the order in which changelog sections are displayed.
    # https://towncrier.readthedocs.io/en/stable/configuration.html#use-a-toml-array-defined-order
    # # Custom fragment types using TOML array for defined order
    [[tool.towncrier.type]]
        # A boolean value indicating whether the fragment should be considered by the towncrier check command.
        check = true
        # The type / category of the fragment.
        directory = "breaking"
        # The description of the fragment type, as it must be included in the news file.
        name = "Breaking Changes"
        # A boolean value indicating whether the fragment contents should be included in the news file.
        showcontent = true

    [[tool.towncrier.type]]
        check       = true
        directory   = "feat"
        name        = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        check       = true
        directory   = "fix"
        name        = "Bug Fixes"
        showcontent = true

    [[tool.towncrier.type]]
        check       = true
        directory   = "docs"
        name        = "Documentation"
        showcontent = true

    [[tool.towncrier.type]]
        check       = true
        directory   = "chore"
        name        = "Chores"
        showcontent = false

    [[tool.towncrier.type]]
        check       = true
        directory   = "refactor"
        name        = "Code Refactoring"
        showcontent = false

    [[tool.towncrier.type]]
        check       = true
        directory   = "perf"
        name        = "Performance Improvements"
        showcontent = true

    [[tool.towncrier.type]]
        check       = true
        directory   = "ci"
        name        = "CI/CD Improvements"
        showcontent = true

    [[tool.towncrier.type]]
        check       = true
        directory   = "deps"
        name        = "Dependencies"
        showcontent = true

    [[tool.towncrier.type]]
        check       = true
        directory   = "security"
        name        = "Security"
        showcontent = true

    [[tool.towncrier.type]]
        check       = true
        directory   = "test"
        name        = "Testing"
        showcontent = true

    [[tool.towncrier.type]]
        check       = true
        directory   = "style"
        name        = "Code Style"
        showcontent = true

    [[tool.towncrier.type]]
        check       = true
        directory   = "build"
        name        = "Build System"
        showcontent = true

[tool.uv.sources]
    cursor-rules-mcp-server = { workspace = true }
    pytest-freezegun        = { git = "https://github.com/bossjones/pytest-freezegun" }

    # [tool.mypy]
    #     disallow_any_generics = true
    #     disallow_untyped_defs = true
    #     follow_imports        = "silent"
    #     no_implicit_reexport  = true
    #     plugins               = ['pydantic.mypy']
    #     warn_redundant_casts  = true
    #     warn_unused_ignores   = true

    # [tool.pydantic-mypy]
    #     init_forbid_extra             = true
    #     init_typed                    = true
    #     warn_required_dynamic_aliases = true


[tool.mypy]
    # Specifies which files/directories mypy should analyze (only src directory)
    files = ["src"]
    # Requires all function definitions to have type annotations
    disallow_untyped_defs = true
    # Disallows importing Any from modules that don't have type stubs
    disallow_any_unimported = true
    # Prevents mypy from inferring Optional types when None is a default value
    no_implicit_optional = true
    # Enables type checking for functions without type annotations
    check_untyped_defs = true
    # Disables warnings when functions return Any type
    warn_return_any = false
    # Warns about unnecessary # type: ignore comments
    warn_unused_ignores = true
    # Display the codes needed for # type: ignore[code] annotations.
    # Shows specific error codes that can be used in type: ignore comments
    show_error_codes = true
    # Regex pattern defining directories/files to exclude from type checking
    exclude = '''(?x)(
    ^tasks/    # anything under tasks directory
    | ^typings/? # typings directory or typings file
    | ^\.venv/   # .venv directory
    | ^contrib/  # contrib directory
    | ^scripts/  # scripts directory
    | ^venv/     # venv directory
)'''

    # Enable optional errors.
    # List of additional error codes to enable beyond the default set
    enable_error_code = [
        # Requires error codes to be specified in type: ignore comments
        "ignore-without-code",
        # Detects redundant expressions that don't affect program behavior
        "redundant-expr",
        # Warns about unnecessary explicit self parameter type annotations
        "redundant-self",
        # Warns when using bool() in boolean contexts unnecessarily
        "truthy-bool",
        # Warns when checking truthiness of collections that are always truthy
        "truthy-iterable",
        # Warns about awaitable expressions that aren't awaited
        "unused-awaitable",
    ]

    # The following list of codes are globally ignored, do not add to this list
    # List of error codes to disable/suppress globally
    disable_error_code = [
        # annotation-unchecked are 'warning notes', not errors and won't cause mypy to fail
        # but it does create a lot of noise in the CI mypy step.
        # https://mypy-lang.blogspot.com/2022/11/mypy-0990-released.html
        # Suppresses errors when importing modules without type stubs
        "import-untyped",
        # Suppresses warnings about unchecked type annotations
        "annotation-unchecked",
        # Suppresses assignment compatibility errors
        "assignment",
        # Suppresses attribute access errors
        "attr-defined",
        # Suppresses function call argument errors
        "call-arg",
        # Suppresses errors about missing type information
        "has-type",
        # Suppresses import-related errors
        "import",
        # Suppresses miscellaneous type checking errors
        "misc",
        # Suppresses undefined name errors
        "name-defined",
        # Suppresses operator usage errors
        "operator",
        # Suppresses type variable related errors
        "type-var",
        # Suppresses variable annotation errors
        "var-annotated",
        # Suppresses union attribute access errors
        "union-attr",
        # Suppresses return type errors
        "return",
    ]

    # Causes mypy to treat arguments with a None default value as having an implicit Optional type.
    # Controls how mypy handles imports - "skip" means don't follow imports for type checking
    follow_imports = "skip"
    # Warns about casting an expression to its inferred type.
    # Warns when casting to a type that mypy already inferred
    warn_redundant_casts = true

    # Causes mypy to suppress errors caused by not being able to fully infer the types of global and class variables.
    # Allows redefining variables with different types in the same scope
    allow_redefinition = true
    # Enables strict handling of Optional types (prevents None-related errors)
    strict_optional = true
    # Warns about code that can never be executed
    warn_unreachable = true
    # Enables checking of partially typed functions in local scopes
    local_partial_types = true
    # Loads the Pydantic plugin for better Pydantic model type checking
    plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
    # NOTE: https://docs.pydantic.dev/latest/integrations/mypy/#configuring-the-plugin
    # See https://docs.pydantic.dev/latest/integrations/mypy/#mypy-plugin-capabilities for the effects of these options.
    # Prevents Pydantic models from accepting extra fields during initialization
    init_forbid_extra = true
    # Enables type checking for Pydantic model __init__ methods
    init_typed = true
    # Warns about required dynamic aliases in Pydantic models
    warn_required_dynamic_aliases = true

    # By default, imported values to a module are treated as exported and mypy allows other modules to import them.
    # This flag changes the behavior to not re-export unless the item is imported using from-as or is included in __all__.
    # Note this is always treated as enabled for stub files. For example:
    # Prevents implicit re-exporting of imported names (requires explicit __all__ or from-as imports)
    no_implicit_reexport = true

    # Ignores all non-fatal errors.
    # Suppresses all mypy errors (useful for gradual typing adoption)
    ignore_errors = true
    # Ignores errors from missing type stubs for imported modules
    ignore_missing_imports = true
    # Controls import following behavior - "skip" means don't analyze imported modules
    follow_imports = "skip"
    # Enables strict Optional type handling for Pydantic plugin
    strict_optional = true
